test/domains/compilerErrors/sparseSubdom-types.chpl

var RD: domain(1);
type SRT = sparse subdomain(RD);
var SRD: SRT;
type SSRT = sparse subdomain(SRD);
var SSRD: SSRT;

var AD: domain(int);
type SAT = sparse subdomain(AD);
var SAD: SAT;
type SSAT = sparse subdomain(SAD);
var SSAD: SSAT;
