test/domains/compilerErrors/sparseSubdom-types.good
sparseSubdom-types.chpl:9: error: sparse subdomains are currently supported only for rectangular domains
